--- a/roles/RHEL/tasks/main.yml
+++ b/roles/RHEL/tasks/main.yml
@@ -1,21 +1,35 @@
 ---
 # This Playbook runs all the RHEL-based plays in the deployment 
 # Redhat: 
-# copy yum conf
+# copy yum conf, repos
 # TODO ADD SOME MORE
 # install: mysql, python-pip, php
 
 - name: Copy yum.conf to /etc/yum.conf
-  copy: src=templates/yum.conf dest=/etc/yum.conf
+  template: src=yum.conf dest=/etc/yum.conf
 
 - name: Create the EPEL Repository.
-  copy: src=epel.repo.j2 dest=/etc/yum.repos.d/epel.repo
+  template: src=files/epel.repo.j2 dest=/etc/yum.repos.d/epel.repo
 
 - name: Create the GPG key for EPEL
   copy: src=RPM-GPG-KEY-EPEL-7 dest=/etc/pki/rpm-gpg
 
+- name: Copy all rpm-fusion repos
+  copy: > 
+      src=$item
+      dest=/etc/yum.repo.d/
+  with_fileglob:
+     - files/rpmfusion-*
+
+- name: Copy rpm-fusion GPG keys
+  copy: >
+      src=$item
+      dest=/etc/pki/rpm-gpg/
+  with_fileglob:
+     - files/rpm_fusion_GPG/RPM*
+
 - name: Copy iptables config
-  template: src=templates/iptables.j2 dest=/etc/sysconfig/iptables
+  template: src=iptables.j2 dest=/etc/sysconfig/iptables
   notify: restart iptables
 
 # - name: Create the mongod user
@@ -24,22 +38,38 @@
 # - name: Create the data directory for the namenode metadata
 #   file: path={{ mongodb_datadir_prefix }} owner=mongod group=mongod state=directory
 
+- name: Install yum fastest mirror plugin
+  yum: name=yum-plugin-fastestmirror state=installed
+
+- name: Rebuild yum cache with fastest-mirrors
+  command: /usr/bin/yum makecache
+
 - name: Install yum packages
-  yum: name = {{item}} state = installed
+  yum: name={{ item }} state=installed
   with_items:
-    - python-pip
-    - mysql
-    - php
+   - python-pip
+   - httpd
+   - mysqld
+   - MySQL-python
+   - php
+   - php-mysql
+   - mysql-connector-odbc
 
+#install pip packages
+# - name: Install pip packages
+#   pip: name=venv state=latest use_mirrors=no
 
-# - name: Install the mongodb package
-#   yum: name={{ item }} state=installed
-#   with_items:
-#    - libselinux-python
-#    - mongo-10gen
-#    - mongo-10gen-server
-#    - bc
-#    - python-pip
+- name: restart mysql
+  action: restart mysqld
+  notify: restart mysqld
+
+- name: Create the iptables file
+  template: src=iptables.j2 dest=/etc/sysconfig/iptables
+  notify: restart iptables
+
+- name: add mysqld service in initd
+  action: autostart mysqld
+  notify: autostart mysqld
 
 # - name: Install the latest pymongo package
 #   pip: name=pymongo state=latest use_mirrors=no 
