--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-# Handler for mongod
+# Handler for common services
 
-- name: restart iptables
-  service: name=iptables state=restarted
+# - name: restart iptables
+#   service: name=iptables state=restarted
