--- a/roles/RHEL/tasks/main.yml
+++ b/roles/RHEL/tasks/main.yml
@@ -15,18 +15,20 @@
   copy: src=RPM-GPG-KEY-EPEL-7 dest=/etc/pki/rpm-gpg
 
 - name: Copy all rpm-fusion repos
+  tags: force_cp
   copy: > 
-      src=$item
-      dest=/etc/yum.repo.d/
+      src={{item}}
+      dest=/etc/yum.repos.d/
   with_fileglob:
-     - files/rpmfusion-*
+     - rpmfusion-*
 
 - name: Copy rpm-fusion GPG keys
+  tags: force_cp
   copy: >
-      src=$item
+      src={{item}}
       dest=/etc/pki/rpm-gpg/
   with_fileglob:
-     - files/rpm_fusion_GPG/RPM*
+     - rpm_fusion_GPG/RPM*
 
 - name: Copy iptables config
   template: src=iptables.j2 dest=/etc/sysconfig/iptables
